--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -17,11 +17,8 @@
     <script type="text/javascript">      
         document.addEventListener('DOMContentLoaded', function() {
           var elems = document.querySelectorAll('.sidenav');
-          var instances = M.Sidenav.init(elems, options);
+          var instances = M.Sidenav.init(elems);
         });
-
-        // Or with jQuery
-
         $(document).ready(function(){
           $('.sidenav').sidenav();
         });
