--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -17,8 +17,11 @@
     <script type="text/javascript">      
         document.addEventListener('DOMContentLoaded', function() {
           var elems = document.querySelectorAll('.sidenav');
-          var instances = M.Sidenav.init(elems);
+          var instances = M.Sidenav.init(elems, options);
         });
+
+        // Or with jQuery
+
         $(document).ready(function(){
           $('.sidenav').sidenav();
         });
